--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Runs timers all day to make your head explode.",
   "main": "main.js",
   "dependencies": {
+    "chart.js": "^2.2.1",
     "electron": "^1.3.2"
   },
   "devDependencies": {},
