--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "dependencies": {
     "chart.js": "^2.2.1",
-    "electron": "^1.3.2"
+    "electron": "^1.3.2",
+    "jquery": "^3.1.0"
   },
   "devDependencies": {},
   "scripts": {
