--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "chart.js": "^2.2.1",
     "electron": "^1.3.2",
-    "jquery": "^3.1.0"
+    "jquery": "^3.1.0",
+    "semantic-ui": "^2.2.2"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "dev": "node_modules/electron-prebuilt/cli.js ./ --dev"
   },
   "keywords": [
     "timer",
