--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "chart.js": "^2.2.1",
     "electron": "^1.3.2",
+    "electron-reload": "^1.0.1",
     "jquery": "^3.1.0",
     "react": "^15.3.0",
     "semantic-ui": "^2.2.2"
