--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "description": "Runs timers all day to make your head explode.",
   "main": "main.js",
   "dependencies": {
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babelify": "^7.3.0",
     "chart.js": "^2.2.1",
+    "classnames": "^2.2.5",
     "electron": "^1.3.2",
     "electron-reload": "^1.0.1",
     "jquery": "^3.1.0",
     "react": "^15.3.0",
-    "semantic-ui": "^2.2.2"
+    "react-dom": "^15.3.0",
+    "semantic-ui": "^2.2.2",
+    "watchify": "^3.7.0"
   },
   "devDependencies": {},
   "scripts": {
     "start": "electron .",
-    "dev": "electron . --dev"
+    "dev": "electron . --dev",
+    "watch": "watchify react/app.jsx -t babelify -o pages/bundled.js --debug --verbose"
   },
   "keywords": [
     "timer",
