--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^2.2.1",
     "classnames": "^2.2.5",
     "electron": "^1.3.2",
+    "electron-devtools-installer": "^2.0.0",
     "electron-prebuilt": "^1.3.2",
     "electron-reload": "^1.0.1",
     "jquery": "^3.1.0",
