--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
   "name": "electron-timers",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Runs timers all day to make your head explode.",
   "main": "main.js",
   "dependencies": {
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babelify": "^7.3.0",
     "chart.js": "^2.2.1",
     "classnames": "^2.2.5",
-    "electron": "^1.3.2",
-    "electron-devtools-installer": "^2.0.0",
-    "electron-prebuilt": "^1.3.2",
+    "electron-prebuilt": "^1.3.3",
     "electron-reload": "^1.0.1",
     "jquery": "^3.1.0",
     "react": "^15.3.0",
@@ -19,11 +14,21 @@
     "semantic-ui": "^2.2.2",
     "watchify": "^3.7.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babelify": "^7.3.0",
+    "electron": "^1.3.2",
+    "electron-devtools-installer": "^2.0.0",
+    "electron-packager": "^7.5.1",
+    "electron-reload": "^1.0.1",
+    "watchify": "^3.7.0"
+  },
   "scripts": {
     "start": "electron .",
     "dev": "electron . --dev",
-    "watch": "watchify react/app.jsx -t babelify -o pages/bundled.js --debug --verbose"
+    "watch": "watchify react/app.jsx -t babelify -o pages/bundled.js --debug --verbose --ignore ./node_modules/chart*",
+    "package": "electron-packager . TShuffle --overwrite --platform=darwin --arch=x64"
   },
   "keywords": [
     "timer",
